Day 9: iris CLI --summary + vectorized softmaz Jacobian + revision of primes through yeild and revision of argparse

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -7,3 +7,6 @@ name= "tinylist"
 version = "0.1.0"
 description= "A handmade dynamic array"
 requires-python = ">=3.8"
+
+[tool.setuptools]
+packages=["tinylist"]
